menu body overlapping fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -141,6 +141,7 @@ a:hover {
 html,
 body {
     height: 100%;
+    padding-top: 28px;
 }
 
 #wrap {
